@@ -4,6 +4,8 @@ import com.google.auth.oauth2.ServiceAccountCredentials;
 import com.google.cloud.storage.*;
 import lombok.NonNull;
 import net.rewerk.webstore.exception.CloudFileNotFound;
+import net.rewerk.webstore.exception.InvalidUploadTypeException;
+import net.rewerk.webstore.model.entity.Upload;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.scheduling.annotation.Async;
@@ -20,8 +22,10 @@ import java.util.concurrent.TimeUnit;
 
 @Service
 public class UploadService {
-    @Value("${uploads.bucket_name}")
-    private String bucketName;
+    @Value("${uploads.product_images_bucket_name}")
+    private String productImagesBucketName;
+    @Value("${uploads.brand_images_bucket_name}")
+    private String brandImagesBucketName;
     @Value("${uploads.project_id}")
     private String projectId;
     private final Storage storage;
@@ -42,8 +46,10 @@ public class UploadService {
     }
 
     public String signV4UploadURL(@NonNull String objectName,
-                                  @NonNull String mime) {
-        BlobInfo blobInfo = BlobInfo.newBuilder(BlobId.of(bucketName, objectName)).build();
+                                  @NonNull String mime,
+                                  @NonNull Upload.Type uploadType
+    ) {
+        BlobInfo blobInfo = BlobInfo.newBuilder(BlobId.of(getBucketName(uploadType), objectName)).build();
         Map<String, String> extHeaders = new HashMap<>();
         extHeaders.put("Content-Type", mime);
         URL url = storage.signUrl(
@@ -58,11 +64,11 @@ public class UploadService {
         return url.toString();
     }
 
-    public void deleteObject(@NonNull String objectName) {
+    public void deleteObject(@NonNull String objectName, @NonNull Upload.Type uploadType) {
         if (objectName.startsWith("https://")) {
             objectName = objectName.substring(objectName.lastIndexOf("/") + 1);
         }
-        Blob blob = storage.get(bucketName, objectName);
+        Blob blob = storage.get(getBucketName(uploadType), objectName);
         if (blob != null) {
             BlobId blobId = blob.getBlobId();
             storage.delete(blobId);
@@ -70,15 +76,23 @@ public class UploadService {
     }
 
     @Async
-    public CompletableFuture<Void> deleteObjects(List<String> objectNames) throws InterruptedException {
+    public CompletableFuture<Void> deleteObjects(List<String> objectNames, Upload.Type uploadType) throws InterruptedException {
         List<CompletableFuture<Void>> futures = new ArrayList<>();
         for (String objectName : objectNames) {
-            futures.add(CompletableFuture.runAsync(() -> deleteObject(objectName)));
+            futures.add(CompletableFuture.runAsync(() -> deleteObject(objectName, uploadType)));
         }
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]));
     }
 
-    public String getUploadPublicURL(String objectName) {
-        return String.format("https://%s.storage.googleapis.com/%s", bucketName, objectName);
+    public String getUploadPublicURL(String objectName, Upload.Type uploadType) {
+        return "https://%s.storage.googleapis.com/%s".formatted(getBucketName(uploadType), objectName);
+    }
+
+    private String getBucketName(@NonNull Upload.Type uploadType) {
+        if (Upload.Type.PRODUCT_IMAGE.equals(uploadType)) {
+            return productImagesBucketName;
+        } else if (Upload.Type.BRAND_IMAGE.equals(uploadType)) {
+            return brandImagesBucketName;
+        } else throw new InvalidUploadTypeException("Invalid upload type");
     }
 }
